--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,24 +1,40 @@
 {% extends 'core/base.html' %}
 {% block title %}Home{% endblock  %}
-{% block content %}        
-<h1>Bienvenido a la App de Gestión de Pagos</h1>
-{% if user.is_authenticated %}
-    <p>Hola, {{ user.username }}!</p>
-    <ul>
-        {% for pago in payments %}
-            <li>{{ pago.boleta }}: ${{ pago.amount }} (Vence: {{ pago.payment_due }})</li>
-        {% empty %}
-            <li>No tienes pagos registrados.</li>
-        {% endfor %}
-    </ul>
-    <a href="{% url 'core:payment_list' %}">Ver todos los pagos</a><br>
-    <form method="POST" action="{% url 'core:logout' %}">
-        {% csrf_token %}
-        <button type="submit">Cerrar sesión</button>
-    </form>
-{% else %}
-    <a href="{% url 'core:login' %}">Iniciar sesión</a> o 
-    <a href="{% url 'core:register' %}">Regístrate aquí</a>
+{% block content %}
+    <div class="min-h-screen bg-gray-50 flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
+        <div class="max-w-md w-full space-y-8 bg-white p-6 rounded-lg shadow-md">
+            <h1 class="text-3xl font-extrabold text-center text-gray-900 mb-6">  
+                Bienvenido a la App de Gestión de Pagos</h1>
+    {% if user.is_authenticated %}
+        <p class="text-lg text-center text-gray-700 mb-4">Hola, {{ user.username }}!</p>
+        <ul class="space-y-2">
+            {% for pago in payments %}
+                <li class="bg-gray-100 p-3 rounded-lg flex justify-between items-center">
+                    <span class="font-medium">{{ pago.boleta }}</span>${{ pago.amount }} <span class="text-sm text-gray-600">Vence: </span><span class="font-semibold text-red-600">{{ pago.payment_due }}</span>
+                </li>
+            {% empty %}
+                <li class="text-gray-600 text-center">Felicitaciones!!! No tienes pagos pendientes 😀.</li>
+            {% endfor %}
+        </ul>
+        <a href="{% url 'core:payment_list' %}" class="w-full inline-block px-4 py-2 text-center text-white bg-teal-600 rounded-lg hover:bg-teal-700">
+            Ver todos los pagos
+        </a>
+        <form method="POST" action="{% url 'core:logout' %}"  class="mt-4">
+            {% csrf_token %}
+            <button type="submit" class="w-full px-4 py-2 bg-red-500 text-white rounded-lg hover:bg-red-600">
+                Cerrar sesión
+            </button>
+        </form>
+    {% else %}
+    <div class="mt-6 text-center">
+        <a href="{% url 'core:login' %}" class="text-blue-500 hover:underline">
+            Iniciar sesión
+        </a>
+        o 
+        <a href="{% url 'core:register' %}"  class="text-blue-500 hover:underline">
+            Regístrate aquí
+        </a>
+    </div>
 {% endif %}
 
 {% endblock  %}
