--- a/core/templates/core/register.html
+++ b/core/templates/core/register.html
@@ -1,47 +1,49 @@
 {% extends "core/base.html" %}
 {% block title %}Registro{% endblock  %}
 {% block content %}
-    <div class="w-full md:w-1/2 mx-auto p-6 bg-gray-200 rounded-md">
-        <h2 class="mb-6 text-3xl font-semibold text-center italic">Registrarse</h2>
-
-        <form action="." method='post'>
-            {% csrf_token %}
-
-            <div class="mb-3">
-                <label class="inline-block mb-2">User Name</label><br>
-                {{ form.username }}
-            </div>
-
-            <div class="mb-3">
-                <label class="inline-block mb-2">User Email</label><br>
-                {{ form.email }}
-            </div>
-
-            <div class="mb-3">
-                <label class="inline-block mb-2">Password</label><br>
-                {{ form.password1 }}
-            </div>
-
-            <div class="mb-3">
-                <label class="inline-block mb-2">Confirm Password</label><br>
-                {{ form.password2 }}
-            </div>
-
-            {% if form.errors or form.non_fied_errors %}
-                <div class="mb-3 p-6 bg-red-100 rounded-lg">
-                    {% for field in form  %}
-                        {{ field.errors }}
-                    {% endfor %}
-
-                    {{ form.non_field_errors }}
-
-                </div>
-            {% endif %}
+    <div class="min-h-screen flex items-center justify-center">
+        <div class="w-full md:w-1/2 mx-auto p-6 bg-gray-200 rounded-md">
+            <h2 class="mb-6 text-3xl font-semibold text-center italic">Registrarse</h2>
             
-            <button class="py-4 px-8 text-lg bg-teal-600 hover:bg-teal-800 rounded-xl text-white">Submit</button>
+            <form action="." method='post'>
+                {% csrf_token %}
+                
+                <div class="mb-3">
+                    <label class="inline-block mb-2">User Name</label><br>
+                    {{ form.username }}
+                </div>
 
-        </form>
+                <div class="mb-3">
+                    <label class="inline-block mb-2">User Email</label><br>
+                    {{ form.email }}
+                </div>
+
+                <div class="mb-3">
+                    <label class="inline-block mb-2">Password</label><br>
+                    {{ form.password1 }}
+                </div>
+
+                <div class="mb-3">
+                    <label class="inline-block mb-2">Confirm Password</label><br>
+                    {{ form.password2 }}
+                </div>
+
+                {% if form.errors or form.non_fied_errors %}
+                    <div class="mb-3 p-6 bg-red-100 rounded-lg">
+                        {% for field in form  %}
+                            {{ field.errors }}
+                        {% endfor %}
+
+                        {{ form.non_field_errors }}
+
+                    </div>
+                {% endif %}
+                
+                <button class="py-2 px-4 text-lg bg-teal-600 hover:bg-teal-800 rounded-md text-white">Submit</button>
+
+            </form>
 
 
+        </div>
     </div>
 {% endblock  %}
