--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -9,7 +9,7 @@
         <p class="text-lg text-center text-gray-700 mb-4">Hola, {{ user.username }}!</p>
         <ul class="space-y-2">
             {% for pago in payments %}
-                <li class="bg-gray-100 p-3 rounded-lg flex justify-between items-center">
+                <li class="bg-gray-100 p-3 rounded-lg flex flex-col  lg:flex-row justify-between items-center">
                     <span class="font-medium">{{ pago.boleta }}</span>${{ pago.amount }} <span class="text-sm text-gray-600">Vence: </span><span class="font-semibold text-red-600">{{ pago.payment_due }}</span>
                 </li>
             {% empty %}
