--- a/core/templates/core/add_payment.html
+++ b/core/templates/core/add_payment.html
@@ -2,45 +2,50 @@
 {% block title %}Agregage pago{% endblock  %}
 
 {% block content %}
-    <div class="w-full md:w-1/2 mx-auto p-6 bg-gray-200 rounded-md">
+<div class="min-h-screen flex items-center justify-center flex-col">
+    <div class="w-full md:w-1/2 mx-auto p-6 bg-gray-200 rounded-md shadow-lg shadow-zinc-700">
         <h2 class="mb-6 text-3xl font-semibold text-center italic">Agregar Pago</h2>
-
+        
         <form method="post">
             {% csrf_token %}
-
+            
             <div class="mb-3">
                 <label class="inline-block mb-2">Boleta</label><br>
                 {{ form.boleta }}
             </div>
-
+            
+            <p class="text-center text-sm text-gray-400">crear boleta si no se encuntra en la lista <a href="{% url 'core:new_boleta' %}" class="text-blue-500 hover:underline"> Crear boleta</a></p>
+            
             <div class="mb-3">
                 <label class="inline-block mb-2">Importe</label><br>
                 {{ form.amount }}
             </div>
-
+            
             <div class="mb-3">
                 <label class="inline-block mb-2">Fecha de Vencimiento</label><br>
                 {{ form.payment_due }}
             </div>
-
+            
             <div class="mb-3">
                 <label class="inline-block mb-2">Fecha de Pago</label><br>
                 {{ form.payment_day }}
             </div>
-
+            
             {% if form.errors %}
-                <div class="mb-3 p-4 bg-red-100 rounded-lg">
-                    {% for field in form %}
-                        {{ field.errors }}
-                    {% endfor %}
-                    {{ form.non_field_errors }}
-                </div>
+            <div class="mb-3 p-4 bg-red-100 rounded-lg">
+                {% for field in form %}
+                {{ field.errors }}
+                {% endfor %}
+                {{ form.non_field_errors }}
+            </div>
             {% endif %}
-
+            
             <button type="submit" class="py-2 px-4 text-lg bg-teal-600 hover:bg-teal-800 rounded-xl text-white">
                 Agregar Pago
             </button>
         </form>
     </div>
+    <p class="text-center mt-8"><a href="{% url 'core:payment_list' %}" class=" text-blue-500 hover:underline">Volver</a></p>
+</div>
 {% endblock %}
 
