--- a/core/templates/core/add_payment.html
+++ b/core/templates/core/add_payment.html
@@ -45,7 +45,7 @@
             </button>
         </form>
     </div>
-    <p class="text-center mt-8"><a href="{% url 'core:payment_list' %}" class=" text-blue-500 hover:underline">Volver</a></p>
+    <p class="text-center mt-8"><a href="{% url 'core:payment_list' %}" class=" text-blue-500 hover:underline italic hover:font-semibold hover:text-blue-700">Volver a Pagos</a></p>
 </div>
 {% endblock %}
 
