--- a/core/templates/core/payment_list.html
+++ b/core/templates/core/payment_list.html
@@ -103,6 +103,8 @@
     </a>
 </div>
 
+<p class="text-center mt-8"><a href="{% url 'core:home' %}" class=" text-blue-500 hover:underline italic hover:font-semibold hover:text-blue-700">Volver al incio</a></p>
+
 {% endblock %}
 
 
